[package]
name = "dynarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "^0.24.0"
aws-config = "^0.54.1"
serde = { version = "^1.0.158", features = ["derive"] }
serde_json = "^1.0.94"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1.0.40"
rand = "^0.8.5"

[dev-dependencies]
lazy_static = "1.4.0"
