[package]
authors = ["Gabriel Musat Mestre"]
categories = ["databases", "orm", "odm", "aws"]
description = "A DynamoDB odm library for rust"
homepage = "https://github.com/gabotechs/dynarust"
keywords = ["dynamo", "dynamodb", "aws", "odm"]
license = "MIT"
name = "dynarust"
readme = "README.md"
repository = "https://github.com/gabotechs/dynarust"
version = "0.2.4"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "^0.24.0"
aws-config = "^0.54.1"
serde = { version = "^1.0.158", features = ["derive"] }
serde_json = "^1.0.94"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1.0.40"
rand = "^0.8.5"

[dev-dependencies]
lazy_static = "1.4.0"
